--- a/src/View/LoadedCalculator.form
+++ b/src/View/LoadedCalculator.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="530" height="292"/>
+      <xy x="20" y="20" width="530" height="294"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -11,7 +11,9 @@
       <component id="50851" class="javax.swing.JButton" binding="number8">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="69" height="30"/>
+            <minimum-size width="120" height="30"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -21,7 +23,9 @@
       <component id="45f96" class="javax.swing.JButton" binding="number7">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="164" height="30"/>
+            <minimum-size width="120" height="30"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="30"/>
           </grid>
         </constraints>
         <properties>
@@ -30,7 +34,11 @@
       </component>
       <component id="a8f07" class="javax.swing.JButton" binding="number9">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="9"/>
@@ -38,7 +46,11 @@
       </component>
       <component id="7e657" class="javax.swing.JButton" binding="addButton">
         <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="+"/>
@@ -47,7 +59,9 @@
       <component id="5d939" class="javax.swing.JButton" binding="number4">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="164" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -57,7 +71,9 @@
       <component id="2471" class="javax.swing.JButton" binding="number1">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="164" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -67,7 +83,9 @@
       <component id="7d1ab" class="javax.swing.JButton" binding="number2">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="69" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -77,7 +95,9 @@
       <component id="16b74" class="javax.swing.JButton" binding="number5">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="69" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -86,7 +106,11 @@
       </component>
       <component id="39b1a" class="javax.swing.JButton" binding="number6">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="6"/>
@@ -94,7 +118,11 @@
       </component>
       <component id="28aed" class="javax.swing.JButton" binding="subtractButton">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="-"/>
@@ -102,7 +130,11 @@
       </component>
       <component id="705a9" class="javax.swing.JButton" binding="number3">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="3"/>
@@ -110,7 +142,11 @@
       </component>
       <component id="8b42e" class="javax.swing.JButton" binding="multiplyButton">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="×"/>
@@ -119,7 +155,9 @@
       <component id="fa63a" class="javax.swing.JButton" binding="number0">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="69" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -128,7 +166,11 @@
       </component>
       <component id="9b8a" class="javax.swing.JButton" binding="equalsButton">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="="/>
@@ -136,7 +178,11 @@
       </component>
       <component id="f12aa" class="javax.swing.JButton" binding="divideButton">
         <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="÷"/>
@@ -144,7 +190,11 @@
       </component>
       <component id="7e090" class="javax.swing.JButton" binding="ansButton" default-binding="true">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Ans"/>
@@ -152,7 +202,11 @@
       </component>
       <component id="db8f9" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Delete"/>
@@ -160,7 +214,11 @@
       </component>
       <component id="a54b7" class="javax.swing.JSlider" binding="precisionSlider">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="240" height="-1"/>
+            <preferred-size width="240" height="-1"/>
+            <maximum-size width="240" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <majorTickSpacing value="1"/>
@@ -181,8 +239,10 @@
       </component>
       <component id="e5e9a" class="javax.swing.JTextArea" binding="outputArea">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="255" height="40"/>
+            <preferred-size width="255" height="40"/>
+            <maximum-size width="255" height="40"/>
           </grid>
         </constraints>
         <properties>
@@ -191,16 +251,20 @@
           <dropMode value="USE_SELECTION"/>
           <editable value="false"/>
           <enabled value="true"/>
-          <font name="Andale Mono" size="12" style="0"/>
+          <font name="Andale Mono" size="16" style="0"/>
           <lineWrap value="true"/>
-          <rows value="3"/>
+          <rows value="2"/>
           <text value=""/>
           <wrapStyleWord value="false"/>
         </properties>
       </component>
       <component id="9f735" class="javax.swing.JComboBox" binding="modeBox">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <editable value="false"/>
@@ -213,7 +277,9 @@
       <component id="13f5b" class="javax.swing.JButton" binding="decimalButton">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="164" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -222,26 +288,34 @@
       </component>
       <component id="2d858" class="javax.swing.JButton" binding="catalogButton">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="-1"/>
+            <maximum-size width="120" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Catalog"/>
         </properties>
       </component>
-      <component id="816cc" class="javax.swing.JButton" binding="commaButton">
+      <component id="816cc" class="javax.swing.JButton" binding="clearButton">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="164" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <text value=","/>
+          <text value="Clear"/>
         </properties>
       </component>
       <splitpane id="d1dd0" binding="splitPane">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="69" height="30"/>
+            <minimum-size width="120" height="-1"/>
+            <preferred-size width="120" height="30"/>
+            <maximum-size width="120" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -273,17 +347,19 @@
       </splitpane>
       <component id="50700" class="javax.swing.JTextArea" binding="inputArea">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="255" height="-1"/>
+            <preferred-size width="255" height="40"/>
+            <maximum-size width="255" height="40"/>
           </grid>
         </constraints>
         <properties>
           <columns value="2"/>
           <editable value="false"/>
           <enabled value="true"/>
-          <font name="Andale Mono" size="12" style="0"/>
+          <font name="Andale Mono" size="16" style="0"/>
           <lineWrap value="true"/>
-          <rows value="3"/>
+          <rows value="2"/>
         </properties>
       </component>
     </children>
