--- a/src/View/LoadedCalculator.form
+++ b/src/View/LoadedCalculator.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="530" height="294"/>
+      <xy x="20" y="20" width="737" height="318"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -212,31 +212,6 @@
           <text value="Delete"/>
         </properties>
       </component>
-      <component id="a54b7" class="javax.swing.JSlider" binding="precisionSlider">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="240" height="-1"/>
-            <preferred-size width="240" height="-1"/>
-            <maximum-size width="240" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <majorTickSpacing value="1"/>
-          <maximum value="10"/>
-          <minorTickSpacing value="1"/>
-          <paintLabels value="true"/>
-          <paintTicks value="true"/>
-          <snapToTicks value="true"/>
-          <toolTipText value="Precision Slider"/>
-          <value value="5"/>
-          <valueIsAdjusting value="true"/>
-        </properties>
-        <clientProperties>
-          <JSlider.isFilled class="java.lang.Boolean" value="false"/>
-          <Slider.paintThumbArrowShape class="java.lang.Boolean" value="false"/>
-          <html.disable class="java.lang.Boolean" value="false"/>
-        </clientProperties>
-      </component>
       <component id="e5e9a" class="javax.swing.JTextArea" binding="outputArea">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false">
@@ -260,7 +235,7 @@
       </component>
       <component id="9f735" class="javax.swing.JComboBox" binding="modeBox">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="120" height="-1"/>
             <preferred-size width="120" height="-1"/>
             <maximum-size width="120" height="-1"/>
@@ -362,6 +337,56 @@
           <rows value="2"/>
         </properties>
       </component>
+      <splitpane id="8bdd1">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="240" height="60"/>
+            <preferred-size width="240" height="60"/>
+            <maximum-size width="240" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <continuousLayout value="true"/>
+          <dividerLocation value="15"/>
+          <dividerSize value="1"/>
+          <font name="Andale Mono" size="8" style="0"/>
+          <orientation value="0"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="a54b7" class="javax.swing.JSlider" binding="precisionSlider">
+            <constraints>
+              <splitpane position="right"/>
+            </constraints>
+            <properties>
+              <majorTickSpacing value="1"/>
+              <maximum value="10"/>
+              <minorTickSpacing value="1"/>
+              <paintLabels value="true"/>
+              <paintTicks value="true"/>
+              <snapToTicks value="true"/>
+              <toolTipText value="Precision Slider"/>
+              <value value="5"/>
+              <valueIsAdjusting value="true"/>
+            </properties>
+            <clientProperties>
+              <JSlider.isFilled class="java.lang.Boolean" value="false"/>
+              <Slider.paintThumbArrowShape class="java.lang.Boolean" value="false"/>
+              <html.disable class="java.lang.Boolean" value="false"/>
+            </clientProperties>
+          </component>
+          <component id="2311b" class="javax.swing.JLabel">
+            <constraints>
+              <splitpane position="left"/>
+            </constraints>
+            <properties>
+              <font name="Andale Mono" size="10" style="0"/>
+              <horizontalAlignment value="0"/>
+              <text value="Precision Slider"/>
+            </properties>
+          </component>
+        </children>
+      </splitpane>
     </children>
   </grid>
 </form>
